# twosfs

./: .gitignore  .pre-commit-config.yaml  README.md  Snakefile  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  simulation_parameters.json  simulations.tgz  sitefile.py  test_slim.txt  vcf_to_sites.sh
config/: cluster.yml  environment.yml
notebooks/: 2019-10-28_xibeta_vs_fitted.py  2020-04-20_test_tskit.py  2020-04-21_test_snakemake.py  2020-04-23_test_dadi.py  2020-08-27_RecombinationScaling.py  2020-08-27_TestBetaCoalescent.py  2020-08-28_TestDemographicModels.py  2020-08-29_CompareFittedModels.py  2020-08-31_Debug3Epoch.py  2020-08-31_SeedHasher.py  2020-09-01_DebugCont.py  2020-09-01_FittedModels.py  2020-09-15_TestExpGrowth.py  2020-09-23_FittedModelsBeta.py  2020-10-05_FittedModelsExp.py  2020-10-12_RecombinationSensitivity.py  2021-06-12_check_recombination.py  2021-08-01_Refit.py  2021-08-01_TestFitting.py  2021-08-02_TestFitting.py  2021-08-07_Refit.py  ApplyTest.py  Dmel.py  PowerAnalysis.py  RecombinationSearch.py  RecombinationSensitivity.py  Refit.py  Simulations.py  slim_2020-10-08_FittedModelsSlim.py  slim_RecombinationSearch.py
plot_scripts/: 2sfs.py  diversity.py  dros.py  make_power_files.py  plot_power.py  schematic.py  sfs.py  two_dros.py
slim/: holder.txt  run_slim_simulation.txt  sfs_slim.py  slim_sim.txt
snakefiles/: data.snake  distances.snake  dpgp3.snake  k_max.snake  sequencing_noise.snake  simulations.snake  simulations.snake.orig  slim.snake
src/: demographicmodel.py  twosfs.py
(+71 files in other folders)
