[metadata]
name = twosfs
version = 0.0.1
author = Daniel P. Rice
author_email = daniel.paul.rice@gmail.com
description = Computing and manipulating the two-site frequency spectrum
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dp-rice/twosfs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = twosfs
python_requires = ~=3.9
install_requires =
    msprime~=1.0
    tskit~=0.3
    numpy~=1.20
    scipy~=1.6
    attrs~=20.0
    h5py~=3.6

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black
